...
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZxG-jo-IDI">
                                <rect key="frame" x="184" y="433" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vfK-My-bgV">
                                <rect key="frame" x="16" y="754" width="396" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="dJ5-9s-zSx"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                                        <constraint firstItem="1Iw-oY-wry" firstAttribute="leading" secondItem="LoO-be-VCv" secondAttribute="leading" id="qS5-Bo-Qly"/>
                                                        <constraint firstAttribute="bottom" secondItem="1Iw-oY-wry" secondAttribute="bottom" id="rYz-Do-qDe"/>
                                                    </constraints>
                                                </view>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0m3-a5-vPa" userLabel="Like Button">
                                                    <rect key="frame" x="366" y="3" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="Ikq-iv-a03"/>
                                                        <constraint firstAttribute="height" constant="42" id="eHW-od-6in"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="share_button"/>
                                <connections>
                                    <action selector="didTapShareButton:" destination="ojc-FU-vQ5" eventType="touchUpInside" id="ofX-4p-crt"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="nav back button white" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ak-cg-UfS" userLabel="Backward Button">
                                <rect key="frame" x="8" y="55" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="lvW-kN-CVX"/>
                                    <constraint firstAttribute="height" constant="48" id="zci-hI-zQA"/>
                                </constraints>
...
