...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setNeedsStatusBarAppearanceUpdate()
        configureSplashScreenLogo()
        view.backgroundColor = UIColor(named: "black")
        view.accessibilityIdentifier = "SplashViewControllerIdentifier"
    }
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        bearerTokenAvailabilityCheck()
    }
...
